# machine-learning-notes

./: .gitignore  .nojekyll  .vdoc.66d5ca40-0011-4c17-82fe-2011a6d44809.r  Bayesian-Stats.html  Bayesian-Stats.qmd  Bayesian-Stats.rmarkdown  Causal-Inference.html  Causal-Inference.qmd  From-R-to-Stan.html  From-R-to-Stan.qmd  Neural-Networks.html  Neural-Networks.qmd  SQL.html  SQL.qmd  State-farm prep.html  State-farm prep.qmd  Time-Series.html  Time-Series.qmd  _quarto.yml  classification.html  classification.qmd  data-viz.html  data-viz.qmd  hello.py  index.html  index.qmd  index.tex  linear-regression.html  linear-regression.qmd  probability.html  probability.qmd  probability.quarto_ipynb  pyproject.toml  ref.bib  robots.txt  search.json  sitemap.xml  summary.html  tree-based-methods.html  tree-based-methods.qmd  (+3 more)
.github/workflows/: build_book.yaml
Bayesian-Stats_cache/html/: __packages  check2_88f1e0d6a9fba5d7072e121ef5236ef3.RData  check2_88f1e0d6a9fba5d7072e121ef5236ef3.rdb  check2_88f1e0d6a9fba5d7072e121ef5236ef3.rdx  unnamed-chunk-10_b5519aba633fb13d5b93d13c8193624a.RData  unnamed-chunk-10_b5519aba633fb13d5b93d13c8193624a.rdb  unnamed-chunk-10_b5519aba633fb13d5b93d13c8193624a.rdx  unnamed-chunk-11_b23b21a12d7487d50cb045c1f892dac7.RData  unnamed-chunk-11_b23b21a12d7487d50cb045c1f892dac7.rdb  unnamed-chunk-11_b23b21a12d7487d50cb045c1f892dac7.rdx  unnamed-chunk-12_253b05f5ca9c04a5606d8244572302f7.RData  unnamed-chunk-12_76b61ddfd82b6b4e6ed1122956d92669.RData  unnamed-chunk-12_76b61ddfd82b6b4e6ed1122956d92669.rdb  unnamed-chunk-12_76b61ddfd82b6b4e6ed1122956d92669.rdx  unnamed-chunk-12_bc055a27a0a8ef384bc4f4538bb8b1b4.RData  unnamed-chunk-12_bc055a27a0a8ef384bc4f4538bb8b1b4.rdb  unnamed-chunk-12_bc055a27a0a8ef384bc4f4538bb8b1b4.rdx  unnamed-chunk-13_57acec17ec17f02f571bd1edfb92abcf.RData  unnamed-chunk-13_57acec17ec17f02f571bd1edfb92abcf.rdb  unnamed-chunk-13_57acec17ec17f02f571bd1edfb92abcf.rdx  unnamed-chunk-14_bf37e28f72067d52cc0f4b87cf6bb90a.RData  unnamed-chunk-14_bf37e28f72067d52cc0f4b87cf6bb90a.rdb  unnamed-chunk-14_bf37e28f72067d52cc0f4b87cf6bb90a.rdx  unnamed-chunk-15_038c605764df129ba0ebfa4da33b3021.RData  unnamed-chunk-15_038c605764df129ba0ebfa4da33b3021.rdb  unnamed-chunk-15_038c605764df129ba0ebfa4da33b3021.rdx  unnamed-chunk-15_94cf833dbdddba1a11f7d2caaae8956a.RData  unnamed-chunk-15_94cf833dbdddba1a11f7d2caaae8956a.rdb  unnamed-chunk-15_94cf833dbdddba1a11f7d2caaae8956a.rdx  unnamed-chunk-16_fd7ba0ee499061ff3f1bd8709845bf92.RData  unnamed-chunk-16_fd7ba0ee499061ff3f1bd8709845bf92.rdx  unnamed-chunk-17_f830aa20f876f8cae1ccdc0cb609c67b.RData  unnamed-chunk-18_dbe5085316167675c37fa9425b8ddd7b.RData  unnamed-chunk-18_dbe5085316167675c37fa9425b8ddd7b.rdx  unnamed-chunk-19_dc5ed798295c102c1d87441a76c6259c.RData  unnamed-chunk-1_9e0007fcdb55b20fbc34d769e5df67ee.RData  unnamed-chunk-1_9e0007fcdb55b20fbc34d769e5df67ee.rdb  unnamed-chunk-1_9e0007fcdb55b20fbc34d769e5df67ee.rdx  unnamed-chunk-20_59e2dade5d9761f9d6d427f1f6442f48.RData  unnamed-chunk-20_59e2dade5d9761f9d6d427f1f6442f48.rdb  (+167 more)
Causal-Inference_cache/html/: __packages  fig-baker-et-al_61c69757d738af63c37a2934e4c270cb.RData  fig-baker-et-al_61c69757d738af63c37a2934e4c270cb.rdb  (+42 more)
_book/: Bayesian-Stats.html  Causal-Inference.html  index.html  linear-regression.html  search.json
data/: Westminster.geojson  cholera_deaths.geojson  parameters_by_time.csv  pumps.geojson  sample_by_time.csv
docs/: Bayesian-Stats.html  Causal-Inference.html  Neural-Networks.html  SQL.html  Time-Series.html  classification.html  data-viz.html  index.html  linear-regression.html  probability.html  search.json  summary.html  tree-based-methods.html  unsupervised-learning.html
fits/: brain_model.rds  brain_model_sqr.rds
notes/: index.html
stan-mods/: contrasts.stan  mpg  mpg.stan
(+10 files in other folders)
