[project]
name = "job-market-interview-prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adjusttext==0.8",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "antropy==0.1.8",
    "appnope==0.1.4",
    "arch==7.2.0",
    "arviz==0.20.0",
    "asttokens==3.0.0",
    "attrs==24.3.0",
    "autograd==1.7.0",
    "autograd-gamma==0.5.0",
    "babel==2.17.0",
    "cachetools==5.5.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "cloudpickle==3.1.0",
    "comm==0.2.2",
    "commonmark==0.9.1",
    "cons==0.4.6",
    "contourpy==1.3.1",
    "css-inline==0.14.6",
    "cycler==0.12.1",
    "debugpy==1.8.11",
    "decorator==5.1.1",
    "dill==0.3.9",
    "etuples==0.3.9",
    "executing==2.1.0",
    "faicons==0.2.2",
    "fastjsonschema==2.21.1",
    "filelock==3.16.1",
    "fonttools==4.55.3",
    "formulaic==1.1.1",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "great-tables==0.16.1",
    "h5netcdf==1.4.1",
    "h5py==3.12.1",
    "holidays==0.33",
    "htmltools==0.6.0",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "interface-meta==1.3.0",
    "ipykernel==6.29.5",
    "ipython==8.31.0",
    "islp==0.4.0",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "lifelines==0.30.0",
    "lightning-utilities==0.11.9",
    "llvmlite==0.43.0",
    "logical-unification==0.4.6",
    "lxml==5.3.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "minikanren==1.0.3",
    "mizani==0.9.3",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "multipledispatch==1.0.0",
    "multiprocess==0.70.17",
    "narwhals==1.20.1",
    "nbclient==0.10.2",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numba==0.60.0",
    "numpy==1.26.4",
    "packaging==24.2",
    "palmerpenguins==0.1.4",
    "pandas==2.2.3",
    "pandas-flavor==0.6.0",
    "parso==0.8.4",
    "pathos==0.3.3",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "plotly==5.24.1",
    "plotnine==0.12.4",
    "polars==1.18.0",
    "pox==0.3.5",
    "ppft==1.7.6.9",
    "progressbar2==4.5.0",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.1",
    "psutil==6.1.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==16.1.0",
    "pygam==0.9.0",
    "pygments==2.18.0",
    "pymc==5.19.1",
    "pymc-bart==0.8.2",
    "pyparsing==3.2.1",
    "pytensor==2.26.4",
    "python-dateutil==2.9.0.post0",
    "python-utils==3.9.1",
    "pytimetk==1.0.1",
    "pytorch-lightning==2.5.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "scikit-learn==1.6.0",
    "scipy==1.14.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "statsmodels==0.14.4",
    "stochastic==0.6.0",
    "stumpy==1.13.0",
    "supersmoother==0.4",
    "sympy==1.13.1",
    "tenacity==9.0.0",
    "threadpoolctl==3.5.0",
    "toolz==1.0.0",
    "torch==2.5.1",
    "torchmetrics==1.6.1",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "tsfeatures==0.4.5",
    "tsfresh==0.20.3",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "wrapt==1.17.0",
    "xarray==2024.11.0",
    "xarray-einstats==0.8.0",
    "xgboost==2.1.3",
    "yarl==1.18.3",
    "zipp==3.21.0",
]
